--- a/index.html
+++ b/index.html
@@ -148,7 +148,56 @@ function startTransmit() {
   const markFreq = parseFloat(document.getElementById('markFreqInput').value);
   const spaceFreq = parseFloat(document.getElementById('spaceFreqInput').value);
   const baud = parseFloat(document.getElementById('baudRateInput').value);
-  const text = document.getElementById('txText').value;
+  const text = document.getElementById('txText').value.toUpperCase();
+
+  const LETTERS = {
+    '': 0, 'E': 1, '
+': 2, 'A': 3, ' ': 4, 'S': 5, 'I': 6, 'U': 7,
+    '
+': 8, 'D': 9, 'R': 10, 'J': 11, 'N': 12, 'F': 13, 'C': 14, 'K': 15,
+    'T': 16, 'Z': 17, 'L': 18, 'W': 19, 'H': 20, 'Y': 21, 'P': 22, 'Q': 23,
+    'O': 24, 'B': 25, 'G': 26, 'M': 28, 'X': 29, 'V': 30
+  };
+
+  const FIGURES = {
+    '': 0, '3': 1, '
+': 2, '-': 3, ' ': 4, '\'': 5, '8': 6, '7': 7,
+    '
+': 8, '$': 9, '4': 10, ',': 12, '!': 13, ':': 14, '(': 15,
+    '5': 16, '"': 17, ')': 18, '2': 19, '#': 20, '6': 21, '0': 22, '1': 23,
+    '9': 24, '?': 25, '&': 26, '.': 28, '/': 29, ';': 30
+  };
+
+  const LTRS = 0x1F; // 11111
+  const FIGS = 0x1B; // 11011
+  let shift = 'LTRS';
+  const bits = [];
+
+  for (let ch of text) {
+    let code;
+    let targetShift = null;
+    if (LETTERS.hasOwnProperty(ch)) {
+      code = LETTERS[ch];
+      targetShift = 'LTRS';
+    } else if (FIGURES.hasOwnProperty(ch)) {
+      code = FIGURES[ch];
+      targetShift = 'FIGS';
+    } else {
+      continue; // skip unsupported
+    }
+
+    if (targetShift !== shift) {
+      shift = targetShift;
+      const shiftCode = (shift === 'LTRS') ? LTRS : FIGS;
+      bits.push(0);
+      for (let i = 0; i < 5; i++) bits.push((shiftCode >> i) & 1);
+      bits.push(1, 1);
+    }
+
+    bits.push(0);
+    for (let i = 0; i < 5; i++) bits.push((code >> i) & 1);
+    bits.push(1, 1);
+  }
 
   if (!txCtx) txCtx = new (window.AudioContext || window.webkitAudioContext)();
   const oscillator = txCtx.createOscillator();
@@ -156,13 +205,15 @@ function startTransmit() {
   oscillator.connect(gain);
   gain.connect(txCtx.destination);
 
-  const bits = [];
-  for (let ch of text.toUpperCase()) {
-    let code = ch.charCodeAt(0) & 0x1F;
-    bits.push(0);
-    for (let i = 0; i < 5; i++) bits.push((code >> i) & 1);
-    bits.push(1, 1);
+  let t = txCtx.currentTime;
+  const dt = 1 / baud;
+  for (let b of bits) {
+    oscillator.frequency.setValueAtTime(b ? markFreq : spaceFreq, t);
+    t += dt;
   }
+  oscillator.start();
+  oscillator.stop(t);
+}
 
   let t = txCtx.currentTime;
   const dt = 1 / baud;
@@ -195,8 +246,41 @@ class Goertzel {
 }
 
 function decodeBaudot(bits) {
+  const LETTERS = [
+    '', 'E', '
+', 'A', ' ', 'S', 'I', 'U',
+    '
+', 'D', 'R', 'J', 'N', 'F', 'C', 'K',
+    'T', 'Z', 'L', 'W', 'H', 'Y', 'P', 'Q',
+    'O', 'B', 'G', '', 'M', 'X', 'V'
+  ];
+
+  const FIGURES = [
+    '', '3', '
+', '-', ' ', '\'', '8', '7',
+    '
+', '$', '4', '\'', ',', '!', ':', '(',
+    '5', '"', ')', '2', '#', '6', '0', '1',
+    '9', '?', '&', '', '.', '/', ';'
+  ];
+
+  const LTRS = 0x1F;  // 11111
+  const FIGS = 0x1B;  // 11011
+
   const value = bits.slice(1, 6).reduce((acc, b, i) => acc | (b << i), 0);
-  const char = String.fromCharCode(0x40 + value);
+
+  if (typeof decodeBaudot.shift === 'undefined') decodeBaudot.shift = 'LTRS';
+
+  if (value === LTRS) {
+    decodeBaudot.shift = 'LTRS';
+    return;
+  } else if (value === FIGS) {
+    decodeBaudot.shift = 'FIGS';
+    return;
+  }
+
+  const table = decodeBaudot.shift === 'FIGS' ? FIGURES : LETTERS;
+  let char = table[value] || '?';
   document.getElementById("rxOutput").textContent += char;
 }
 </script>
